@@ -251,6 +251,7 @@ enum {
   
   GDataServiceTicket *ticket = [GDataServiceTicket authTicketForService:self];
   [ticket setUserData:serviceUserData_];
+  [ticket setSurrogates:serviceSurrogates_];
   [ticket setUploadProgressSelector:serviceUploadProgressSelector_];
   
   NSMethodSignature *signature = [self methodSignatureForSelector:theSEL];
